[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
aws-config = "0.55.3"
aws-sdk-ssm = "0.28.0"
futures = "0.3.28"
oauth2 = "4.4.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["macros"] }
aws_lambda_events = "0.8.3"
lambda_runtime = "0.6.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
reqwest = { version = "0.11.16", default-features = false,  features = ["rustls-tls", "json"] }
aws-sdk-dynamodb = "0.28.0"
serde_dynamo = { version = "4.2.3", features = ["aws-sdk-dynamodb+0_28"] }
async-session = "3.0.0"
uuid = "1.4.0"
