[package]
name = "login_fn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.8.3"

lambda_runtime = "0.6.0"
serde = "1.0.136"
serde_json = "1.0.96"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

lib = {path = "../lib"}
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "json"] }
tl = "0.7.7"
rustls = "0.21.0"
oauth2 = "4.4.1"

aws-config = "0.55.3"
aws-sdk-ssm = "0.28.0"
aws-sdk-dynamodb = "0.28.0"
serde_dynamo = { version = "4.2.3", features = ["aws-sdk-dynamodb+0_28"] }
